# potmmcp

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
baposgmcp/: config.py  exp.py  hps.py  meta_policy.py  parts.py  pbt.py  policy.py  policy_prior.py  reinvigorate.py  render.py  runner.py  stats.py
baposgmcp/baselines/: README.md  __init__.py  mcp.py  meta.py  po_meta.py  po_meta_rollout.py
baposgmcp/pbt/: __init__.py  interaction_graph.py  klr.py  sp.py  utils.py
baposgmcp/plot/: __init__.py  belief.py  expected.py  heatmap.py  pairwise.py  paper.py  utils.py
baposgmcp/rllib/: __init__.py  export_import.py  export_lib.py  import_export_utils.py  import_lib.py  klr.py  oap_policy.py  policy.py  sp.py  train.py  trainer.py  utils.py
baposgmcp/run/: __init__.py  exp.py  exp_load.py  plot_utils.py  render.py  rl_exp.py  runner.py  stats.py  tree_exp.py  writer.py
baposgmcp/tree/: __init__.py  bareinvigorate.py  belief.py  hps.py  node.py  parallel_policy.py  policy.py  reinvigorate.py  stats.py  utils.py
experiments/: PE_agent_index_cleanup.ipynb  README.md  common.py  env_analysis.ipynb  episode_results_compiling.ipynb  pairwise_comparison.py  run_driving_exp.py  run_driving_many_pi_exp.py  run_pe_evader_exp.py  run_pe_pursuer_exp.py  run_pp2_exp.py  run_pp4_exp.py  shared_analysis.ipynb  split_pe_results.ipynb  top_up_episode_results_compiling.ipynb  train_continue.py  train_klr.py  train_sp.py  ucbmcp_results_compiling.ipynb
experiments/Driving/: baposgmcp_analysis_v2.ipynb  baposgmcp_analysis_v3.ipynb  exp_utils.py  experiment.py  notes.org  pairwise_analysis.ipynb  pairwise_analysis_v2.ipynb  pairwise_comparison.py  plot_utils.py  render.py  test_experiment.py  train_continue.py  train_klr.py  train_sp.py  tune_pb2.py
experiments/Driving14x14WideRoundAbout-n2-v0/: analysis.ipynb  klr_analysis_v2.ipynb  klr_experiment_v2.py  render.py  run_experiment.py  run_pi_experiment.py  run_time_experiment.py  run_ucbmcp_experiment.py
experiments/LBF10x10-n2-f7-static-v2/: analysis.ipynb  heuristic_experiment.py  heuristic_meta_pi_experiment.py  run_experiment.py  run_time_experiment.py  run_ucbmcp_experiment.py
experiments/PredatorPrey10x10-P2-p3-s2-coop-v0/: analysis.ipynb  run_experiment.py  run_pi_experiment.py  run_time_experiment.py  run_ucbmcp_experiment.py  sp_teams_analysis.ipynb  sp_teams_experiment_v0.py  sp_teams_experiment_v0_random.py
posggym/: README.rst  pyproject.toml
posggym-agents/: README.md  pyproject.toml  setup.py
posggym-agents/evaluation_scripts/: asymmetric_pairwise_comparison.py  render.py  symmetric_pairwise_comparison.py
posggym-agents/posggym_agents/: __init__.py  config.py  policy.py
posggym-agents/posggym_agents/agents/: __init__.py  random.py  registration.py
posggym-agents/posggym_agents/agents/driving14x14wideroundabout_n2_v0/: __init__.py  load.py
posggym-agents/posggym_agents/agents/driving14x14wideroundabout_n2_v0/agents/: klr_k0_seed0.pkl  klr_k0_seed1.pkl  klr_k0_seed2.pkl  klr_k0_seed3.pkl  klr_k0_seed4.pkl  klr_k1_seed0.pkl  klr_k1_seed1.pkl  klr_k1_seed2.pkl  klr_k1_seed3.pkl  klr_k1_seed4.pkl  klr_k2_seed0.pkl  klr_k2_seed1.pkl  klr_k2_seed2.pkl  klr_k2_seed3.pkl  klr_k2_seed4.pkl  klr_k3_seed0.pkl  klr_k3_seed1.pkl  klr_k3_seed2.pkl  klr_k3_seed3.pkl  klr_k3_seed4.pkl  klr_k4_seed0.pkl  klr_k4_seed1.pkl  klr_k4_seed2.pkl  klr_k4_seed3.pkl  klr_k4_seed4.pkl  klrbr_k4_seed0.pkl  klrbr_k4_seed1.pkl  klrbr_k4_seed2.pkl  klrbr_k4_seed3.pkl  klrbr_k4_seed4.pkl
posggym-agents/posggym_agents/agents/predatorprey10x10_P2_p3_s2_coop_v0/: __init__.py  load.py  train_config.py
posggym-agents/posggym_agents/agents/predatorprey10x10_P2_p3_s2_coop_v0/agents/: sp_seed0.pkl  sp_seed1.pkl  sp_seed2.pkl  sp_seed3.pkl  sp_seed4.pkl
posggym-agents/posggym_agents/agents/predatorprey10x10_P4_p3_s3_coop_v0/: __init__.py  load.py
posggym-agents/posggym_agents/agents/predatorprey10x10_P4_p3_s3_coop_v0/agents/: sp_seed0.pkl  sp_seed1.pkl  sp_seed2.pkl  sp_seed3.pkl  sp_seed4.pkl
posggym-agents/posggym_agents/agents/pursuitevasion16x16_v0/: __init__.py  load.py  train_config.py
posggym-agents/posggym_agents/agents/pursuitevasion16x16_v0/agents/: klr_k0_seed0_i0.pkl  klr_k0_seed0_i1.pkl  klr_k0_seed1_i0.pkl  klr_k0_seed1_i1.pkl  klr_k0_seed2_i0.pkl  klr_k0_seed2_i1.pkl  klr_k0_seed3_i0.pkl  klr_k0_seed3_i1.pkl  klr_k0_seed4_i0.pkl  klr_k0_seed4_i1.pkl  klr_k1_seed0_i0.pkl  klr_k1_seed0_i1.pkl  klr_k1_seed1_i0.pkl  klr_k1_seed1_i1.pkl  klr_k1_seed2_i0.pkl  klr_k1_seed2_i1.pkl  klr_k1_seed3_i0.pkl  klr_k1_seed3_i1.pkl  klr_k1_seed4_i0.pkl  klr_k1_seed4_i1.pkl  klr_k2_seed0_i0.pkl  klr_k2_seed0_i1.pkl  klr_k2_seed1_i0.pkl  klr_k2_seed1_i1.pkl  klr_k2_seed2_i0.pkl  klr_k2_seed2_i1.pkl  klr_k2_seed3_i0.pkl  klr_k2_seed3_i1.pkl  klr_k2_seed4_i0.pkl  klr_k2_seed4_i1.pkl  klr_k3_seed0_i0.pkl  klr_k3_seed0_i1.pkl  klr_k3_seed1_i0.pkl  klr_k3_seed1_i1.pkl  klr_k3_seed2_i0.pkl  klr_k3_seed2_i1.pkl  klr_k3_seed3_i0.pkl  klr_k3_seed3_i1.pkl  klr_k3_seed4_i0.pkl  klr_k3_seed4_i1.pkl  (+30 more)
posggym-agents/posggym_agents/exp/: __init__.py  exp.py  pairwise.py  render.py  runner.py  stats.py  writer.py
posggym-agents/posggym_agents/pbt/: __init__.py  interaction_graph.py  klr.py  sp.py  utils.py
posggym-agents/posggym_agents/plot/: __init__.py  heatmap.py  pairwise.py  utils.py
posggym-agents/posggym_agents/rllib/: __init__.py  export_lib.py  import_lib.py  klr.py  policy.py  sp.py  train.py  trainer.py  utils.py
posggym-agents/tests/: conftest.py
posggym-agents/tests/agents/: spec_list.py  test_agents.py
posggym-agents/tests/pbt/: test_interaction_graph.py
posggym-agents/training_scripts/: train_klr.py  train_sp.py
posggym/posggym/envs/: __init__.py
posggym/posggym/envs/grid_world/driving/: env.py  grid.py
posggym/posggym/envs/grid_world/predator_prey/: grid.py
posggym/posggym/envs/grid_world/pursuit_evasion/: grid.py  model.py
potmmcp/: config.py  meta_policy.py  policy.py  policy_prior.py
scripts/: compile_results.py
test/: run_random_ucbmcp.py  tmp.py
(+294 files in other folders)
