# Package ######################################################################

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "baposgmcp"
description = "Bayes Adaptive Monte-Carlo Planning for Partially Observable Stochastic Games."
readme = "README.md"
requires-python = ">= 3.8"
authors = [{ name = "Jonathon Schwartz", email = "jonathon.schwartz@anu.edu.au" }]
license = { text = "MIT License" }
keywords = ["reinforcement learning", "game", "RL", "AI", "planning", "posg"]
classifiers = [
	# change to `5 - Production/Stable` maybe one day
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dependencies = [
    "torch>=1.11, < 2",
	"ray[rllib]==1.12",
	"posggym[all]==0.1.0",
	"posggym-agents[all]==0.1.0",
    "numpy >=1.22.0",
	"matplotlib>=3.5",
    "networkx==2.8.2",
    "pygraphviz==1.9",
    "typing-extensions >=4.3.0",
	"pandas >=1.4",
    "prettytable >=3.3"

]
dynamic = ["version"]

[project.optional-dependencies]
testing = ["pytest >=7.2"]

[project.urls]
Homepage = "https://github.com/RDLLab/posggym"
Repository = "https://github.com/RDLLab/posggym/"
Documentation = "https://posggym.readthedocs.io/"
"Bug Report" = "https://github.com/RDLLab/posggym/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["baposgmcp", "baposgmcp.*"]

[tool.setuptools.package-data]
posggym = [
    "py.typed",
]

# Linters and Test tools #######################################################
[tool.black]
safe = true
line-length = 88

[tool.isort]
atomic = true
profile = "black"
src_paths = ["baposgmcp", "tests"]
extra_standard_library = ["typing_extensions"]
indent = 4
lines_after_imports = 2
multi_line_output = 3