# Package ######################################################################

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "potmmcp"
description = "Partially Observable Type-based Meta Monte-Carlo Planning."
readme = "README.md"
requires-python = ">= 3.8"
authors = [{ name = "Jonathon Schwartz", email = "jonathon.schwartz@anu.edu.au" }]
license = { text = "MIT License" }
keywords = ["reinforcement learning", "game", "RL", "AI", "planning", "posg"]
classifiers = [
	# change to `5 - Production/Stable` maybe one day
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dependencies = [
    "torch>=1.11, < 2",
	"ray[rllib]==1.12",
	'posggym @ git+https://github.com/RDLLab/posggym.git@v0.1.0',
	"posggym-agents @ git+https://github.com/Jjschwartz/posggym-agents.git@v0.1.2",
    "numpy >=1.22.0",
	"matplotlib>=3.5",
    "typing-extensions >=4.3.0",
	"pandas >=1.4",
    "prettytable >=3.3"

]
dynamic = ["version"]

[project.optional-dependencies]
# additional dependencies for visualizations such as viewing the tree
viz = [
	"networkx==2.8.2",
    "pygraphviz==1.9",
]
testing = ["pytest >=7.2"]

[project.urls]
Homepage = "https://github.com/Jjschwartz/potmmcp"
Repository = "https://github.com/Jjschwartz/potmmcp"
"Bug Report" = "https://github.com/Jjschwartz/potmmcp/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["potmmcp", "potmmcp.*"]

[tool.setuptools.package-data]
posggym = [
    "py.typed",
]

# Linters and Test tools #######################################################
[tool.black]
safe = true
line-length = 88

[tool.isort]
atomic = true
profile = "black"
src_paths = ["potmmcp", "tests"]
extra_standard_library = ["typing_extensions"]
indent = 4
lines_after_imports = 2
multi_line_output = 3